@@ -26,11 +26,12 @@ RXHourCharacter   "r"
 TXHourCharacter   "t"
 
 # how units are prefixed when traffic is shown
-# 0 = IEC standard prefixes (KiB/MiB/GiB/TiB)
-# 1 = old style binary prefixes (KB/MB/GB/TB)
+# 0 = IEC standard prefixes (KiB/MiB/GiB...)
+# 1 = old style binary prefixes (KB/MB/GB...)
+# 2 = SI decimal prefixes (kB/MB/GB...)
 UnitMode 0
 
-# how units are prefixed when traffic rate is shown
+# how units are prefixed when traffic rate is shown in bits
 # 0 = IEC binary prefixes (Kibit/s...)
 # 1 = SI decimal prefixes (kbit/s...)
 RateUnitMode 1
