@@ -99,6 +99,14 @@ START_TEST(getvalue_normal)
 	ck_assert_str_eq(getvalue(1099511627776ULL, 0, 1), "1.00 TB");
 	ck_assert_str_eq(getvalue(1125899906842624ULL, 0, 1), "1.00 PB");
 	ck_assert_str_eq(getvalue(1152921504606846976ULL, 0, 1), "1.00 EB");
+	cfg.unitmode = 2;
+	ck_assert_str_eq(getvalue(100, 0, 1), "100 B");
+	ck_assert_str_eq(getvalue(1000, 0, 1), "1.00 kB");
+	ck_assert_str_eq(getvalue(1000000, 0, 1), "1.00 MB");
+	ck_assert_str_eq(getvalue(1000000000, 0, 1), "1.00 GB");
+	ck_assert_str_eq(getvalue(1000000000000ULL, 0, 1), "1.00 TB");
+	ck_assert_str_eq(getvalue(1000000000000000ULL, 0, 1), "1.00 PB");
+	ck_assert_str_eq(getvalue(1000000000000000000ULL, 0, 1), "1.00 EB");
 }
 END_TEST
 
@@ -121,6 +129,14 @@ START_TEST(getvalue_estimate)
 	ck_assert_str_eq(getvalue(1099511627776ULL, 0, 2), "1.00 TB");
 	ck_assert_str_eq(getvalue(1125899906842624ULL, 0, 2), "1.00 PB");
 	ck_assert_str_eq(getvalue(1152921504606846976ULL, 0, 2), "1.00 EB");
+	cfg.unitmode = 2;
+	ck_assert_str_eq(getvalue(100, 0, 2), "100 B");
+	ck_assert_str_eq(getvalue(1000, 0, 2), "1 kB");
+	ck_assert_str_eq(getvalue(1000000, 0, 2), "1.00 MB");
+	ck_assert_str_eq(getvalue(1000000000, 0, 2), "1.00 GB");
+	ck_assert_str_eq(getvalue(1000000000000ULL, 0, 2), "1.00 TB");
+	ck_assert_str_eq(getvalue(1000000000000000ULL, 0, 2), "1.00 PB");
+	ck_assert_str_eq(getvalue(1000000000000000000ULL, 0, 2), "1.00 EB");
 }
 END_TEST
 
@@ -143,6 +159,14 @@ START_TEST(getvalue_imagescale)
 	ck_assert_str_eq(getvalue(1099511627776ULL, 0, 3), "1 TB");
 	ck_assert_str_eq(getvalue(1125899906842624ULL, 0, 3), "1 PB");
 	ck_assert_str_eq(getvalue(1152921504606846976ULL, 0, 3), "1 EB");
+	cfg.unitmode = 2;
+	ck_assert_str_eq(getvalue(100, 0, 3), "100 B");
+	ck_assert_str_eq(getvalue(1000, 0, 3), "1 kB");
+	ck_assert_str_eq(getvalue(1000000, 0, 3), "1 MB");
+	ck_assert_str_eq(getvalue(1000000000, 0, 3), "1 GB");
+	ck_assert_str_eq(getvalue(1000000000000ULL, 0, 3), "1 TB");
+	ck_assert_str_eq(getvalue(1000000000000000ULL, 0, 3), "1 PB");
+	ck_assert_str_eq(getvalue(1000000000000000000ULL, 0, 3), "1 EB");
 }
 END_TEST
 
@@ -153,6 +177,8 @@ START_TEST(getvalue_padding)
 	ck_assert_str_eq(getvalue(1024, 10, 1), "  1.00 KiB");
 	cfg.unitmode = 1;
 	ck_assert_str_eq(getvalue(1024, 10, 1), "   1.00 KB");
+	cfg.unitmode = 2;
+	ck_assert_str_eq(getvalue(1000, 10, 1), "   1.00 kB");
 }
 END_TEST
 
@@ -165,6 +191,12 @@ START_TEST(getvalue_zero_values)
 	ck_assert_int_eq((int)strlen(getvalue(0, 20, 2)), 20);
 	ck_assert_str_eq(getvalue(0, 0, 3), "0 B");
 	cfg.unitmode = 1;
+	ck_assert_str_eq(getvalue(0, 0, 1), "0 B");
+	ck_assert_str_eq(getvalue(0, 10, 2), "    --    ");
+	ck_assert_int_eq((int)strlen(getvalue(0, 10, 2)), 10);
+	ck_assert_int_eq((int)strlen(getvalue(0, 20, 2)), 20);
+	ck_assert_str_eq(getvalue(0, 0, 3), "0 B");
+	cfg.unitmode = 2;
 	ck_assert_str_eq(getvalue(0, 0, 1), "0 B");
 	ck_assert_str_eq(getvalue(0, 10, 2), "    --    ");
 	ck_assert_int_eq((int)strlen(getvalue(0, 10, 2)), 10);
@@ -207,6 +239,14 @@ START_TEST(gettrafficrate_bytes)
 	ck_assert_str_eq(gettrafficrate(1099511627776ULL, 1, 0), "1.00 TB/s");
 	ck_assert_str_eq(gettrafficrate(1125899906842624ULL, 1, 0), "1.00 PB/s");
 	ck_assert_str_eq(gettrafficrate(1152921504606846976ULL, 1, 0), "1.00 EB/s");
+	cfg.unitmode = 2;
+	ck_assert_str_eq(gettrafficrate(900, 1, 0), "900 B/s");
+	ck_assert_str_eq(gettrafficrate(100000, 1, 0), "100.00 kB/s");
+	ck_assert_str_eq(gettrafficrate(1000000, 1, 0), "1.00 MB/s");
+	ck_assert_str_eq(gettrafficrate(1000000000, 1, 0), "1.00 GB/s");
+	ck_assert_str_eq(gettrafficrate(1000000000000ULL, 1, 0), "1.00 TB/s");
+	ck_assert_str_eq(gettrafficrate(1000000000000000ULL, 1, 0), "1.00 PB/s");
+	ck_assert_str_eq(gettrafficrate(1000000000000000000ULL, 1, 0), "1.00 EB/s");
 }
 END_TEST
 
@@ -232,6 +272,14 @@ START_TEST(gettrafficrate_bits)
 	ck_assert_str_eq(gettrafficrate(1099511627776ULL, 1, 0), "8.80 Tbit/s");
 	ck_assert_str_eq(gettrafficrate(1125899906842624ULL, 1, 0), "9.01 Pbit/s");
 	ck_assert_str_eq(gettrafficrate(1152921504606846976ULL, 1, 0), "9.22 Ebit/s");
+	cfg.unitmode = 2;
+	ck_assert_str_eq(gettrafficrate(100, 1, 0), "800 bit/s");
+	ck_assert_str_eq(gettrafficrate(102400, 1, 0), "819.20 kbit/s");
+	ck_assert_str_eq(gettrafficrate(1048576, 1, 0), "8.39 Mbit/s");
+	ck_assert_str_eq(gettrafficrate(1073741824, 1, 0), "8.59 Gbit/s");
+	ck_assert_str_eq(gettrafficrate(1099511627776ULL, 1, 0), "8.80 Tbit/s");
+	ck_assert_str_eq(gettrafficrate(1125899906842624ULL, 1, 0), "9.01 Pbit/s");
+	ck_assert_str_eq(gettrafficrate(1152921504606846976ULL, 1, 0), "9.22 Ebit/s");
 
 	cfg.rateunitmode = 0;
 	cfg.unitmode = 0;
@@ -243,6 +291,14 @@ START_TEST(gettrafficrate_bits)
 	ck_assert_str_eq(gettrafficrate(1125899906842624ULL, 1, 0), "8.00 Pibit/s");
 	ck_assert_str_eq(gettrafficrate(1152921504606846976ULL, 1, 0), "8.00 Eibit/s");
 	cfg.unitmode = 1;
+	ck_assert_str_eq(gettrafficrate(100, 1, 0), "800 bit/s");
+	ck_assert_str_eq(gettrafficrate(102400, 1, 0), "800.00 Kibit/s");
+	ck_assert_str_eq(gettrafficrate(1048576, 1, 0), "8.00 Mibit/s");
+	ck_assert_str_eq(gettrafficrate(1073741824, 1, 0), "8.00 Gibit/s");
+	ck_assert_str_eq(gettrafficrate(1099511627776ULL, 1, 0), "8.00 Tibit/s");
+	ck_assert_str_eq(gettrafficrate(1125899906842624ULL, 1, 0), "8.00 Pibit/s");
+	ck_assert_str_eq(gettrafficrate(1152921504606846976ULL, 1, 0), "8.00 Eibit/s");
+	cfg.unitmode = 2;
 	ck_assert_str_eq(gettrafficrate(100, 1, 0), "800 bit/s");
 	ck_assert_str_eq(gettrafficrate(102400, 1, 0), "800.00 Kibit/s");
 	ck_assert_str_eq(gettrafficrate(1048576, 1, 0), "8.00 Mibit/s");
